--- a/src/index.scss
+++ b/src/index.scss
@@ -16,23 +16,51 @@
 
 html {
   @media (max-width: 1080px) {
-    font-size: 93.75%; // 15px
+    font-size: 93.75%; /* 15px */
   }
   @media (max-width: 720px) {
-    font-size: 87.5%; //  14px
+    font-size: 87.5%; /* 14px */
   }
 }
 
 body {
-  background: var(--backgrund);
   -webkit-font-smoothing: antialiased;
-  background: #100816;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: blur(5px); /* Adjust the blur intensity as needed */
+  z-index: -1;
 }
 
 body,
 input,
 textarea,
 button {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
+}
+
+/* Large screens */
+@media (min-width: 721px) {
+  body::before {
+    background-image: url("../public/BgComp.jpg");
+  }
+}
+
+/* Mobile screens */
+@media (max-width: 720px) {
+  body::before {
+    background-image: url("../public/BgPhn.jpg");
+  }
 }
